<resources>
    <string name="app_name">Atentik</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="optionMenu">&#8942;</string>

    <!--FONT START-->
    <string name="fontReguler" translatable="false">fonts/Gotham_Light.otf</string>
    <string name="fontRegulerItalic" translatable="false">fonts/Gotham_LightItalic.otf</string>
    <string name="fontBold" translatable="false">fonts/Gotham_Book.otf</string>
    <string name="fontBoldItalic" translatable="false">fonts/Gotham_BookItalic.otf</string>
    <string name="fontBlack" translatable="false">fonts/Gotham_Medium.otf</string>
    <string name="fontBlackItalic" translatable="false">fonts/Gotham_MediumItalic.otf</string>
    <string name="fontExtraBold" translatable="false">fonts/GothamBlack.otf</string>
    <string name="fontThin" translatable="false">fonts/Gotham_Thin.otf</string>
    <!--FONT FINISH-->

    <string name="logDosen"><u>Sign in as lecturer</u></string>
    <string name="logMhsw"><u>Sign in as student</u></string>
    <string name="roleAbsen"><u>Baca aturan tentang kehadiran disini</u></string>

    <!--MATKUL-->
    <string name="matkul1">Pengantar Algoritma dan Pemograman</string>
    <string name="matkul2">Basis Data</string>
    <string name="matkul3">Pengantar Multimedia</string>
    <!--MATKUL FINISH-->

    <!--RUANGAN-->
    <string name="aa301">AA301</string>
    <string name="aa302">AA302</string>
    <string name="aa303">AA303</string>
    <!--RUANGAN FINISH-->

    <!--MATKUL-->
    <string name="mk1">Struktur Data</string>
    <string name="mk2">Bahasa Indonesia untuk Teknik Informatika</string>
    <string name="mk3">Aljabar Linier</string>
    <string name="mk4">Rekayasa Perangkat Lunak</string>
    <string name="mk5">Jaringan Komputer dan Komunikasi</string>
    <!--MATKUL FINISH-->

    <string name="sampleTxt">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry is standard dummy text ever since the 1500s,
        when an unknown printer took a galley of type and scrambled it to make a type
        specimen book. It has survived not only five centuries, but also the leap into
        electronic typesetting, remaining essentially unchanged. It was popularised in
        the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
        and more recently with desktop publishing software like Aldus PageMaker including
        versions of Lorem Ipsum.
    </string>

    <string name="about">
        Atentik merupakan kependekan dari attandence tik, aplikasi yang hadir untuk
        menangani masalah-masalah yang ada di lingkungan TIK PNJ khususnya pada masalah
        absensi mahasiswa, aplikasi ini hanya dikhususkan untuk warga TIK PNJ.
        Selain itu terdapat pula beberapa fitur tambahan yang bisa dimanfaatkan
        oleh warga TIK PNJ. Aplikasi ini mengandalkan teknologi Bluetooth dan koneksi internet
        pada smartphone user.
    </string>

    <string name="spasi"> &#8226; </string>

    <string name="developer">
        <b>Founded : September 2017</b>\n
        Develeped by TiregDev
    </string>

    <string name="web">
        <u>www.atentik.id</u>
    </string>

    <string name="statistik">
        Saat ini mode statistik hanya dapat Anda rasakan pada versi web, silahkan akses web kami!
    </string>

    <string name="sumber">Sumber: Peraturan Pendidikan PNJ 2015</string>

    <string name="pasal21">
(1) Ketidakhadiran yang diizinkan dapat diberikan dengan alasan sakit, mendapat kecelakaan, atau alasan penting yang dapat diterima oleh Ketua Jurusan atau pejabat yang ditunjuk.\n\n
(2) Izin ketidakhadiran selama satu hari atau kurang, harus diperoleh dari ketua jurusan atau pejabat yang ditunjuk.\n\n
(3) Permohonan izin ketidakhadiran tersebut pada Ayat (2) harus dilakukan secara tertulis sekurang-kurangnya dalam waktu 1X24 (dua puluh empat) jam sebelumnya.\n\n
(4) Ketidakhadiran yang direncanakan lebih dari sehari, izin harus diminta secara tertulis kepada ketua jurusan, sekurang-kurangnya 3X24 jam sebelumnya.\n\n
(5) Ketidakhadiran yang tidak terduga dan/atau mendadak harus diberitahukan oleh mahasiswa atau orang tua/wali kepada ketua jurusan atau pejabat yang ditunjuk dalam waktu 3X24 jam sesudah menerima pemberitahuan tertulis.\n\n
(6) Ketidakhadiran karena sakit atau kecelakaan harus diberitahukan oleh mahasiswa atau orang tua/wali dengan melampirkan surat keterangan dokter.\n\n
(7) Izin ketidakhadiran dipertimbangkan oleh ketua jurusan.
    </string>

    <string name="pasal22">
(1) Ketidakhadiran yang tidak diizinkan dikenakan sanksi kompensasi sebagai berikut
<b>(Jangka waktu ketidakhadiran yang tidak diizinkan atau meninggalkan pelajaran sebelum waktunya):\n</b>
<i>- 5 menit s.d. 100 menit = kompensasi 5 kalinya\n</i>
<i>- lebih dari 100 menit = dianggap tidak hadir selama 1 (satu) hari yang diperhitungkan sesuai dengan jumlah jam kuliah pada hari tersebut\n</i>
<i>- 1 (satu) hari = kompensasi 2 kalinya\n\n</i>
(2) Waktu ketidakhadiran yang tidak diizinkan dan keterlambatan faktual (bukan waktu
kompensasi) dijumlahkan setiap hari selama semester berjalan dengan ketentuan
sebagai berikut:\n
<i>- 750 menit, diberikan surat peringatan I\n</i>
<i>- 1.500 menit, diberikan surat peringatan II\n</i>
<i>- 1.850 menit, diberikan surat peringatan III\n</i>
<i>- 1.900 menit, diberhentikan studinya/dikeluarkan dari Politeknik\n</i>
<i>- kurang dari 750 menit langsung menjadi 1500 menit, diberikan surat
peringatan I dan surat peringatan II\n</i>
<i>- kurang dari 1500 menit langsung menjadi 1850 menit, diberikan surat
peringatan II dan surat peringatan III\n\n</i>
(3) Surat peringatan I dan II ditandatangani oleh Ketua Jurusan terkait, sedangkan
surat peringatan III ditandatangani oleh Direktur.\n\n
(4) Peringatan tertulis dikirimkan kepada mahasiswa dan orang tua/walinya.\n\n
(5) Ketidakhadiran yang tidak diijinkan yang melebihi 20% dari total kehadiran setiap mata
kuliah tidak diperbolehkan mengikuti ujian akhir semester (UAS) yang ditetapkan oleh
Ketua Jurusan.\n\n
(6) Tata cara kompensasi dan penyampaian surat peringatan diatur dengan keputusan
Direktur.
    </string>

    <string name="pasal23">
(1) Batas maksimum ketidakhadiran mahasiswa, baik yang diizinkan maupun yang
tidak diizinkan, adalah 114 jam perkuliahan dalam satu semester.\n\n
(2) Ketidakhadiran yang diizinkan dan tidak diizinkan sampai 38 jam diberi surat pemberitahuan 1, sampai 76 jam diberi surat pemberitahuan 2.\n\n
(3) Sanksi akademis sebagaimana dimaksud dalam Ayat (1) pada semester 1 dan 2
berupa pemberhentian studi (drop out).\n\n
(4) Sanksi akademis sebagaimana dimaksud dalam Ayat (1) pada semester 3 dan
semester selanjutnya berupa cuti akademik.\n\n
(5) Dalam hal sebagaimana dalam Ayat (3), mahasiswa yang bersangkutan dapat
mengulang seluruh mata kuliah pada semester yang sama pada tahun akademik
berikutnya.
    </string>
    <string name="salah_data">Data yang dimasukkan tidak tepat</string>
    <string name="data_sudah_ada">Data sudah ada</string>
    <string name="sudah_regist">Anda telah teregistrasi</string>
    <string name="no_koneksi">Koneksi internet tidak tersambung</string>

</resources>
