<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp">

        <LinearLayout
            android:id="@+id/app_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/icon_logo"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/app_name"
                android:textColor="@color/Abu"
                android:textSize="20sp"
                android:textStyle="bold"
                app:smart_font="@string/fontExtraBold" />

        </LinearLayout>

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_name"
            android:layout_marginTop="20dp"
            android:text="@string/about"
            app:smart_font="@string/fontReguler" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/web"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/desc"
            android:layout_marginTop="30dp"
            android:text="@string/web"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            app:smart_font="@string/fontBlack" />


        <fr.arnaudguyon.smartfontslib.FontTextView
            android:id="@+id/develop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/web"
            android:layout_marginTop="50dp"
            android:text="@string/developer"
            android:textAlignment="center"
            app:smart_font="@string/fontBold" />

        <View
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_below="@id/develop"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:alpha="0.5"
            android:background="@color/Abu" />

    </RelativeLayout>

</ScrollView>