<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="id.tiregdev.atentik.Activity.peraturan">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/SetToolbar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontReguler"
                android:textSize="10sp"
                android:textColor="@color/Abu"
                android:text="@string/sumber" />

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontExtraBold"
                android:textColor="@color/Abu"
                android:layout_marginTop="20dp"
                android:text="Pasal 21"
                android:textAlignment="center"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontBold"
                android:layout_marginTop="5dp"
                android:textColor="@color/Abu"
                android:text="Ketidakhadiran/Absen yang Diizinkan"
                android:textAlignment="center"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontReguler"
                android:textColor="@color/Abu"
                android:text="@string/pasal21"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/AbuMuda"
                android:layout_marginTop="15dp"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontExtraBold"
                android:textColor="@color/Abu"
                android:layout_marginTop="15dp"
                android:text="Pasal 22"
                android:textAlignment="center"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontBold"
                android:layout_marginTop="5dp"
                android:textColor="@color/Abu"
                android:text="Ketidakhadiran/Absen yang Tidak Diizinkan"
                android:textAlignment="center"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontReguler"
                android:textColor="@color/Abu"
                android:text="@string/pasal22"
                android:layout_marginTop="10dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/AbuMuda"
                android:layout_marginTop="15dp"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontExtraBold"
                android:textColor="@color/Abu"
                android:layout_marginTop="15dp"
                android:text="Pasal 23"
                android:textAlignment="center"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontBold"
                android:layout_marginTop="5dp"
                android:textColor="@color/Abu"
                android:text="Batas Maksimum Ketidakhadiran dan Sanksi"
                android:textAlignment="center"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontReguler"
                android:textColor="@color/Abu"
                android:text="@string/pasal23"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"/>

        </LinearLayout>


    </LinearLayout>

</ScrollView>
