<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/wrapDetailNotif"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/SetToolbar">

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:id="@+id/toolbar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontBold"
                style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </android.support.v7.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="15dp">

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontBlack"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:id="@+id/judul"
                android:text="Update Apps"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontReguler"
                android:textColor="@color/Abu"
                android:textSize="12sp"
                android:layout_marginTop="5dp"
                android:id="@+id/tgl"
                android:text="02/02/2018"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/AbuMuda"
                android:layout_marginTop="20dp"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:smart_font="@string/fontReguler"
                android:textColor="@color/Abu"
                android:id="@+id/isi"
                android:layout_marginTop="20dp"
                android:text="@string/sampleTxt"/>

        </LinearLayout>

    </LinearLayout>
</ScrollView>