<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:background="@color/orangePastel"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="-20dp"
            android:paddingTop="16dp"
            android:src="@drawable/logo" />

        <fr.arnaudguyon.smartfontslib.FontTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_toEndOf="@id/imageView"
            android:paddingTop="16dp"
            android:textColor="@color/putih"
            android:layout_marginStart="-10dp"
            app:smart_font="@string/fontBlack"
            android:textSize="26sp"
            android:layout_marginTop="25dp"/>

    </RelativeLayout>

    <fr.arnaudguyon.smartfontslib.FontTextView
        android:id="@+id/nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:textColor="@color/putih"
        app:smart_font="@string/fontBlack"
        android:textSize="16sp"
        android:text="Dr. Geraldi Joni STr., MI."
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <fr.arnaudguyon.smartfontslib.FontTextView
        android:id="@+id/nim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/putih"
        app:smart_font="@string/fontReguler"
        android:text="098898267615562874" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/AbuMuda"
        android:layout_marginTop="20dp"/>

</LinearLayout>
