<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="7dp"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="true">

        <RelativeLayout
            android:id="@+id/wrapperCV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="15dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ava"
                android:id="@+id/ava"
                android:contentDescription="@string/app_name"/>

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:id="@+id/nama"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@id/ava"
                android:layout_marginStart="15dp"
                android:text="Pak Fauzi"
                android:textColor="@color/colorPrimaryDark"
                app:smart_font="@string/fontBlack" />

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:id="@+id/nimOrNip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nama"
                android:layout_toEndOf="@id/ava"
                android:layout_marginStart="15dp"
                android:text="09218819000023"
                android:textSize="12sp"
                app:smart_font="@string/fontReguler" />

            <fr.arnaudguyon.smartfontslib.FontTextView
                android:id="@+id/posisi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nimOrNip"
                android:layout_toEndOf="@id/ava"
                android:layout_marginStart="15dp"
                android:layout_marginTop="5dp"
                android:text="Sedang berada di AA301 dari jam 07.30"
                android:textSize="12sp"
                app:smart_font="@string/fontReguler" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>